{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 61,
  "lineage": "52c5e0c0-0eee-3d33-83b3-dc18c9f52f16",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:vpc/vpc-0f82095ba1b38b677",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06aef8d49a730b402",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01962a386e009c18e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f82095ba1b38b677",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00349c61741984ff0",
            "owner_id": "427366301535"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:internet-gateway/igw-09e1e4a93feee6b02",
            "id": "igw-09e1e4a93feee6b02",
            "owner_id": "427366301535",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e1e4a93feee6b02",
            "id": "r-rtb-03ee6e41cbfbd16ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ee6e41cbfbd16ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:route-table/rtb-04f5fe98d8b473f62",
            "id": "rtb-04f5fe98d8b473f62",
            "owner_id": "427366301535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-db",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-db",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:route-table/rtb-0a69a3a43aea6e19f",
            "id": "rtb-0a69a3a43aea6e19f",
            "owner_id": "427366301535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-private",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-private",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:route-table/rtb-03ee6e41cbfbd16ba",
            "id": "rtb-03ee6e41cbfbd16ba",
            "owner_id": "427366301535",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-public",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-public",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b0fb06f4a3e5777",
            "route_table_id": "rtb-04f5fe98d8b473f62",
            "subnet_id": "subnet-076ab14d5428b77bf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6aa2dc1de289626",
            "route_table_id": "rtb-04f5fe98d8b473f62",
            "subnet_id": "subnet-0154631f2abd057e0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca3cf04c8b09058e",
            "route_table_id": "rtb-0a69a3a43aea6e19f",
            "subnet_id": "subnet-0d2fa8c93ff0bbac9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be0129094d7a0218",
            "route_table_id": "rtb-0a69a3a43aea6e19f",
            "subnet_id": "subnet-0efae7fd1c364ea3f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a5d2154dd2e6125",
            "route_table_id": "rtb-03ee6e41cbfbd16ba",
            "subnet_id": "subnet-0fd86fe6f0c137a8a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee35f39eca7ce9d",
            "route_table_id": "rtb-03ee6e41cbfbd16ba",
            "subnet_id": "subnet-0e78cef100d037c2d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:subnet/subnet-076ab14d5428b77bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076ab14d5428b77bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "427366301535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-db-1",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-db-1",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:subnet/subnet-0154631f2abd057e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0154631f2abd057e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "427366301535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-db-2",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-db-2",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:subnet/subnet-0d2fa8c93ff0bbac9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2fa8c93ff0bbac9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "427366301535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-private-1",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-private-1",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:subnet/subnet-0efae7fd1c364ea3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efae7fd1c364ea3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "427366301535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-private-2",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-private-2",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:subnet/subnet-0fd86fe6f0c137a8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd86fe6f0c137a8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427366301535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-public-1",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-public-1",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:subnet/subnet-0e78cef100d037c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e78cef100d037c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427366301535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-public-2",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox-public-2",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:vpc/vpc-07bb5a9596cc6e69e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0223139c0fa5f2ffd",
            "default_route_table_id": "rtb-0d941ca49ab88a950",
            "default_security_group_id": "sg-0ef0f0ceef3d4c7b6",
            "dhcp_options_id": "dopt-01962a386e009c18e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07bb5a9596cc6e69e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d941ca49ab88a950",
            "owner_id": "427366301535",
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "VPC",
              "Name": "instana-sandbox",
              "Project_Name": "Instana",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}